--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="C:\Users\nitin\Desktop\CSS- My Site\images\LinkedInDP2.jfif" alt="">
+      <img src="images\LinkedInDP2.jfif" alt="">
       <h2>Hello.</h2>
       <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
